--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 		/>
 		<link
-			href="http://fonts.cdnfonts.com/css/arial-rounded-mt-bold"
+			href="https://fonts.cdnfonts.com/css/arial-rounded-mt-bold"
 			rel="stylesheet"
 		/>
 	</head>
